<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="Cancel"
        android:id="@+id/CancelTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#5aabff" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="113dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/StartPage_wlcmTxt"
            android:id="@+id/WelcomeTextView"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView"
            android:text="@string/StartPage_bodyTxt"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="16sp"
            android:layout_marginRight="5sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/StartPage_linkText"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16sp"
            android:textColor="#5aabff" />
    </LinearLayout>

</RelativeLayout>
