<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_marginBottom="40sp">
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/imageview"
            android:src="@drawable/datagathering1"
            android:scaleType="fitCenter" />
    </RelativeLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/DataGathering_wlcmTxt"
            android:id="@+id/titleview"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textview"
            android:text="@string/DataGathering_bodyTxt"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="16sp"
            android:layout_marginRight="5sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DataGathering_linkText"
            android:id="@+id/linktextview"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16sp"
            android:textColor="#5aabff" />
    </LinearLayout>

</RelativeLayout>
